feat: change vue to nuxt

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "server": "pnpm --filter server",
     "shared": "pnpm --filter shared",
     "dev": "pnpm --recursive --parallel --stream run dev",
-    "build": "pnpm run client build && pnpm run server build"
+    "start": "pnpm --recursive --parallel --stream run start",
+    "build": "pnpm --recursive run build"
   },
   "keywords": [],
   "author": "",
