--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
   "name": "warranty-archive",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "client": "pnpm --filter client",
-    "server": "pnpm --filter server",
-    "shared": "pnpm --filter shared",
-    "dev": "pnpm --recursive --parallel --stream run dev",
-    "start": "pnpm --recursive --parallel --stream run start",
-    "build": "pnpm --recursive run build"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "server": "^1.0.38"
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.0.3"
   },
   "devDependencies": {
-    "typescript": "^5.3.2"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.3"
   }
 }
