--- a/.github/workflows/build-and-push-to-registry.yaml
+++ b/.github/workflows/build-and-push-to-registry.yaml
@@ -4,6 +4,9 @@ env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 
+on:
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
