--- a/.github/workflows/build-and-push-to-registry.yaml
+++ b/.github/workflows/build-and-push-to-registry.yaml
@@ -15,8 +15,16 @@ jobs:
       packages: write
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: linux/arm64
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -42,37 +50,3 @@ jobs:
           platforms: linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-# jobs:
-#   build-and-push:
-#     runs-on: ubuntu-latest
-
-#     strategy:
-#       matrix:
-#         platform: [linux/amd64, linux/arm64/v8]
-
-#     steps:
-#       - name: Checkout Repository
-#         uses: actions/checkout@v2
-
-#       - name: Set up QEMU
-#         uses: docker/setup-qemu-action@v2
-
-#       - name: Set up Docker Buildx
-#         uses: docker/setup-buildx-action@v1
-
-#       - name: Login to GitHub Container Registry
-#         uses: docker/login-action@v1
-#         with:
-#           registry: ghcr.io
-#           username: ${{ github.actor }}
-#           password: ${{ secrets.GITHUB_TOKEN }}
-
-#       - name: Build and Push Docker Image
-#         run: |
-#           docker buildx create --use
-#           docker buildx inspect --bootstrap
-#           docker buildx build \
-#             --platform ${{ matrix.platform }} \
-#             -t ghcr.io/${{ github.repository }}:latest-${{ matrix.platform }} \
-#             -t ghcr.io/${{ github.repository }}:${{ github.sha }}-${{ matrix.platform }} \
-#             --push .
