--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,10 +7,14 @@ services:
     environment:
       - DB_HOST=192.168.1.99
       - DB_PORT=6543
+      - DB_USERNAME=postgres
+      - DB_PASSWORD=postgresdbpassword
+      - DB_DATABASE=postgres_db
       - BACKEND_PORT=6544
       - NEXT_PUBLIC_BACKEND_PORT=6544
 
     ports:
       - 3000:3000
+      - 6544:6544
 
     build: .
